# psae-factor

./: README.md  pyproject.toml
.github/workflows/: ci.yml
psae_factor/: __init__.py
psae_factor/analysis/: ic.py  quantiles.py  returns.py
psae_factor/data/: sample_loader.py
psae_factor/tears/: full_tear.py
tests/: test_ic.py
