[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psae-factor"
version = "0.1.0"
description = "Factor analysis & IC tear sheets for PSAE (≈ Alphalens)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "psae-core>=0.1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pytest-cov", "jupyter"]

[project.entry-points."psae.factor"]
full_tear = "psae_factor.tears.full_tear:create_full_tear_sheet"
